# link-patcher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  collect_linkers.bat  rustfmt.toml
src/: exe_tools.rs  lib.rs  main.rs  patch_gen.rs
tests/: README.md  patch_tests.rs
tests/link_executables/: README.md
tools/collect_linkers/: Cargo.toml
tools/collect_linkers/src/: main.rs
tools/find_patches/: Cargo.toml
tools/find_patches/src/: main.rs
tools/linker_utils/: Cargo.toml
tools/linker_utils/src/: lib.rs
