[package]
name = "link-patcher"
version = "1.0.0"
authors = ["Malte Thiesen <malte@kamalook.de>"]
description = "Patches the Microsoft Linker so that it produces executables without the 'Rich' header"
build = "build.rs"
edition = "2018"
license = "MIT"

[dependencies]
byteorder = "1.4.2"
capstone = "0.7.0"
common_failures = "0.1.1"
failure = "0.1.8"
itertools = "0.10.0"
lazy_static = "1.4.0"
rprompt = "1.0.5"
structopt = "0.3.21"
yansi = "0.5.0"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
winreg = "0.8.0"

[build-dependencies]
walkdir = "2"
