[package]
name = "link-patcher"
version = "1.0.0"
authors = ["Malte Thiesen <malte@kamalook.de>"]
description = "Patches the Microsoft Linker so that it produces executables without the 'Rich' header"
build = "build.rs"
edition = "2018"
license = "MIT"

[dependencies]
byteorder = "1.4.3"
capstone = "0.11.0"
eyre = "0.6.8"
itertools = "0.10.3"
lazy_static = "1.4.0"
rprompt = "1.0.5"
structopt = "0.3.26"
yansi = "0.5.1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
winreg = "0.10.1"

[build-dependencies]
walkdir = "2"
