[package]
name = "collect_linkers"
version = "0.1.0"
authors = ["Malte Thiesen <m.thiesen@dsfishlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_failures = "0.1.1"
crc32fast = "1.2.0"
failure = "0.1.5"
lazy_static = "1.3.0"
walkdir = "2.2.9"
widestring = "0.4.0"
winapi = { version = "0.3.7", features = ["shlobj", "winerror", "winbase", "winver"] }
