[package]
name = "collect_linkers"
version = "0.1.0"
authors = ["Malte Thiesen <m.thiesen@dsfishlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
linker_utils = { path = '..\linker_utils\' }
walkdir = "2.2.9"
widestring = "0.4.0"
winapi = { version = "0.3.8", features = ["shlobj", "winerror", "winbase", "winver"] }
