[package]
name = "find_patches"
version = "0.1.0"
authors = ["Malte Thiesen <malte@kamalook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_failures = "0.1.1"
failure = "0.1.5"
linker_utils = { path = '..\linker_utils\' }
walkdir = "2.2.9"
link-patcher = { path = '..\..' }
