[package]
name = "find_patches"
version = "0.1.0"
authors = ["Malte Thiesen <malte@kamalook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
link-patcher = { path = '..\..' }
linker_utils = { path = '..\linker_utils\' }
walkdir = "2.2.9"
