[package]
name = "linker_utils"
version = "0.1.0"
authors = ["Malte Thiesen <malte@kamalook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.2.0"
eyre = "0.6.8"
widestring = "0.4.0"
winapi = { version = "0.3.8", features = ["errhandlingapi", "winbase", "winver", "winerror"] }
